--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,7 @@ pnpm-debug.log*
 *.ntvs*
 *.njsproj
 *.sln
-<<<<<<< HEAD
 *.sw?
-=======
-*.sw?
->>>>>>> 6b562412f815fd20e39a07ae51d730066a686223
+© 2022 GitHub, Inc.
+Terms
+Priv
